--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,12 @@
 .logo {
     display: block;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .app-title {
+    margin: 10px;
     text-align: center;
     font-size: 50px;
     color: coral;
@@ -16,10 +18,11 @@
     width: auto;
     height: auto;
     border: 15px solid;
+    color: coral;
     border-radius: 1cm;
     border-color: darkcyan;
     box-shadow: 1cm;
-    color: coral;
+    background-color: lightcyan;
 }
 
 .input-text {
@@ -52,8 +55,8 @@
  }
 
  .ul li {
-     background-color: lightcyan;
-     color: crimson;
+     background-color: white;
+     color: black;
      border: 2px solid coral;
      border-radius: 1cm;
      padding: 5px;
